--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -101,8 +101,8 @@
         <!--  -->
         <div class="d_flex align_center justify_between ">
 
-          <button matTooltip="Full screen" *ngIf="fullscreenEnabled" [fxShow]="!displaySearchMode()" mat-icon-button
-            fxHide.lt-md (click)="toggleFullscreen()">
+          <button matTooltip="{{'custom_k.full-screen' | translate}}" *ngIf="fullscreenEnabled"
+            [fxShow]="!displaySearchMode()" mat-icon-button fxHide.lt-md (click)="toggleFullscreen()">
             <mat-icon class="material-icons">{{ isFullscreen() ? 'fullscreen_exit' : 'fullscreen' }}</mat-icon>
           </button>
           <tb-user-menu [displayUserInfo]="!displaySearchMode()"></tb-user-menu>
