--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -29,6 +29,8 @@
   background-color: rgba(0, 0, 0, 0);
 }
 
+
+
 :host {
   display: flex;
   width: 100%;
@@ -50,8 +52,15 @@
       }
     }
 
+
     .mat-drawer-content {
       margin-left: var(--visible-drawer-space);
+    }
+
+    @media (max-width:960px) {
+      .mat-drawer-content {
+        margin-left: 0;
+      }
     }
   }
 
