--- a/src/app/shared/components/user-menu.component.scss
+++ b/src/app/shared/components/user-menu.component.scss
@@ -27,9 +27,6 @@
 }
 
 :host {
-
-
-
   div.tb-user-info {
     line-height: 1.5;
 
@@ -81,21 +78,50 @@
   min-width: 256px;
 }
 
-.btn_menu_custom_k {
-  height: unset !important;
+::ng-deep .mat-menu-panel {
+  max-width: unset !important;
+  background-color: #838383 !important;
+}
 
-  margin: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.matMenu_custom_k {
+  margin: 1rem 1rem;
+  width: 300px;
 
-  div {
-    display: flex;
-    justify-content: space-between;
+  .btn_menu_custom_k {
+    height: unset !important;
 
-    p {
-      font-size: 1rem;
+    margin: 1rem 0;
+    padding: .5rem 1rem;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: #fff;
 
+    .btn_menu_time {
+      opacity: 0.7;
     }
+
+    div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      p {
+        font-size: 1rem;
+
+      }
+    }
+
+
   }
+}
 
+.dialog_custome_k {
+  position: relative;
+}
 
+.exit_btn_custom_k {
+  position: absolute;
+  right: -22px;
+  top: -23px;
+  border: none;
 }
